dz3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dz
spec:
  selector:
    app: dz
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
