dz3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dz
            port:
              number: 80
      - path: /otusapp/nozv/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dz
            port:
              number: 80
